<resources>
    <string name="app_name">Ventas</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="nombre_usuario">Nombre de Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="cargar">Cargar</string>
    <string name="ventas">Ventas</string>
    <string name="salir">Salir</string>
    <string name="registro">Registro</string>
    <string name="inventario">Inventario</string>
    <string name="agregar">Agregar</string>
    <string name="store">Store</string>
    <string name="agregar_producto">Agregar Producto</string>
    <string name="id_producto">Id</string>
    <string name="producto">Producto</string>
    <string name="codigo">Codigo</string>
    <string name="categoria">Categoria</string>
    <string name="precio">Precio</string>
    <string name="cantidad">Cantidad</string>
    <string name="descripcion">Descripcion</string>
    <string name="guardar">Guardar</string>
    <string name="editar">Editar</string>
    <string name="borrar">Borrar</string>
    <string name="ver">Ver</string>
    <string name="mostrar_datos">(Aquí aparecerán los datos al consultar)</string>
    <string name="mi_carrito_de_compras">Mi Carrito De Compras</string>
    <string name="precio_total">Precio Total:</string>
    <string name="btn_comprar">Comprar</string>
    <string name="id_venta">Id</string>
    <string name="eliminar_venta">Eliminar</string>
    <string name="agregar_producto_informacion">Agregar Producto Información</string>
    <string name="nombre_producto_vender">Nombre</string>
    <string name="cantidad_producto_vender">Cantidad</string>
    <string name="costo_producto_vender">Costo</string>
    <string name="producto_recyclerview">Producto</string>
    <string name="codigo_recyclerview">Codigo</string>
    <string name="tipo_recyclerview">Tipo</string>
    <string name="precio_recyclerview">Precio</string>
    <string name="cant_recyclerview">Cant.</string>
    <string name="total">Total</string>
    <string name="titulo">Titulo</string>
    <string name="subtitulo">Subtitulo</string>
</resources>