<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    android:backgroundTint="#FF398A3C"
    app:cardCornerRadius="5dp"
    app:cardElevation="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/registroProducto"
            android:layout_width="94dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="3dp"
            android:layout_marginRight="120dp"
            android:layout_marginBottom="3dp"
            android:padding="4dp"
            android:text="@string/producto_recyclerview"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/registroId"
            android:layout_width="36dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="9dp"

            android:layout_marginEnd="3dp"
            android:layout_marginRight="120dp"
            android:layout_marginBottom="3dp"
            android:layout_toRightOf="@id/registroProducto"
            android:padding="4dp"
            android:text="@string/id_producto"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/registroCantidad"
            android:layout_width="67dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="3dp"
            android:layout_toRightOf="@id/registroId"
            android:padding="4dp"
            android:text="@string/cantidad"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/registroPrecio"
            android:layout_width="67dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="3dp"
            android:layout_toRightOf="@id/registroCantidad"
            android:padding="4dp"
            android:text="@string/precio"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/registroTotal"
            android:layout_width="67dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="3dp"
            android:layout_toRightOf="@id/registroPrecio"
            android:padding="4dp"
            android:text="@string/total"
            android:textColor="@color/white" />



    </RelativeLayout>

</androidx.cardview.widget.CardView>