<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_margin="15dp">
    <LinearLayout
        android:orientation="vertical"
        android:paddingBottom="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/agregar_producto_informacion"
            android:textStyle="bold"
            android:textSize="19sp"
            android:textColor="@color/white"
            android:background="@color/purple_700"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:elevation="15dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/userName"
            android:hint="@string/nombre_producto_vender"
            android:padding="15dp"
            android:background="@drawable/shape_background"
            android:inputType="textPersonName"
            android:textColor="@color/purple_700"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/userNo"
            android:hint="@string/cantidad_producto_vender"
            android:inputType="phone"
            android:padding="15dp"
            android:background="@drawable/shape_background"
            android:textColor="@color/purple_700"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/userCost"
            android:hint="@string/costo_producto_vender"
            android:inputType="phone"
            android:padding="15dp"
            android:background="@drawable/shape_background"
            android:textColor="@color/purple_700"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </LinearLayout>

</LinearLayout>