<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="wrap_content"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_margin="8dp"
android:backgroundTint="#FF398A3C"
app:cardCornerRadius="5dp"
app:cardElevation="4dp">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/idLL1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="8">

        <TextView
            android:id="@+id/idProducto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="2"
            android:padding="4dp"
            android:text="@string/producto_recyclerview"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/idCodigo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1.5"
            android:padding="4dp"
            android:text="@string/codigo_recyclerview"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/idTipo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1.5"
            android:padding="4dp"
            android:text="@string/tipo_recyclerview"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/idPrecio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1.5"
            android:padding="4dp"
            android:text="@string/precio_recyclerview"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/idCantidad"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1.5"
            android:padding="4dp"
            android:text="@string/cant_recyclerview"
            android:textColor="@color/white" />



    </LinearLayout>


    <TextView
        android:id="@+id/valorProducto"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/idLL1"
        android:layout_marginStart="3dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="3dp"
        android:layout_marginRight="120dp"
        android:layout_marginBottom="3dp"
        android:padding="4dp"
        android:text="@string/producto_recyclerview"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/valorCodigo"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/idLL1"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="9dp"

        android:layout_marginEnd="3dp"
        android:layout_marginRight="120dp"
        android:layout_marginBottom="3dp"
        android:layout_toRightOf="@id/valorProducto"
        android:padding="4dp"
        android:text="@string/codigo_recyclerview"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/valorTipo"
        android:layout_width="67dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/idLL1"
        android:layout_marginStart="3dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="3dp"
        android:layout_toRightOf="@id/valorCodigo"
        android:padding="4dp"
        android:text="@string/tipo_recyclerview"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/valorPrecio"
        android:layout_width="67dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/idLL1"
        android:layout_marginStart="3dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="3dp"
        android:layout_toRightOf="@id/valorTipo"
        android:padding="4dp"
        android:text="@string/precio_recyclerview"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/valorCantidad"
        android:layout_width="67dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/idLL1"
        android:layout_marginStart="3dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="3dp"
        android:layout_toRightOf="@id/valorPrecio"
        android:padding="4dp"
        android:textColor="@color/white" />

</RelativeLayout>

</androidx.cardview.widget.CardView>